cmake_minimum_required(VERSION 3.17)
project(baekjoon_oj)

set(CMAKE_CXX_STANDARD 20)

add_executable(template template.cpp)
add_executable(02309_seven_dwarfs 02309_seven_dwarfs.cpp)
add_executable(02580_sudoku 02580_sudoku.cpp)
add_executable(14888_insert_operators 14888_insert_operators.cpp)
add_executable(14889_start_vs_link 14889_start_vs_link.cpp)
add_executable(11047_coins_0 11047_coins_0.cpp)
add_executable(01931_conference_room_reservation 01931_conference_room_reservation.cpp)
add_executable(11399_atm 11399_atm.cpp)
add_executable(01541_missing_brackets 01541_missing_brackets.cpp)
add_executable(06549_largest_rectangle_in_a_histogram 06549_largest_rectangle_in_a_histogram_vip.cpp)
add_executable(02630_making_colored_paper 02630_making_colored_paper.cpp)
add_executable(01992_quadtree 01992_quadtree.cpp)
add_executable(01780_number_of_paper_pieces 01780_number_of_paper_pieces.cpp)
add_executable(01629_power 01629_power.cpp)
add_executable(11401_binomial_coefficient_3 11401_binomial_coefficient_3.cpp)
add_executable(02740_matrix_multiplication 02740_matrix_multiplication.cpp)
add_executable(10830_power_matrix 10830_power_matrix.cpp)
add_executable(11444_fibonacci_6 11444_fibonacci_6.cpp)
add_executable(02261_nearest_two_points 02261_nearest_two_points.cpp)
add_executable(05086_factor_or_multiple 05086_factor_or_multiple.cpp)
add_executable(01037_factors 01037_factors.cpp)
add_executable(11653_factorize 11653_factorize.cpp)
add_executable(02609_gcd_and_lcm 02609_gcd_and_lcm.cpp)
add_executable(02981_inspection 02981_inspection.cpp)
add_executable(03036_rings 03036_rings.cpp)
add_executable(01676_zeros_until_first_nonzero_in_factorial 01676_zeros_until_first_nonzero_in_factorial.cpp)
add_executable(02004_zeros_in_combination 02004_zeros_in_combination.cpp)
add_executable(09375_fashion_king 09375_fashion_king.cpp)
add_executable(10828_stack 10828_stack.cpp)
add_executable(10773_zeroize_last 10773_zeroize_last.cpp)
add_executable(01725_largest_rectangle_in_a_histogram 01725_largest_rectangle_in_a_histogram.cpp)
add_executable(09012_vps 09012_vps.cpp)
add_executable(04949_balanced_world 04949_balanced_world.cpp)
add_executable(01874_stack_sequence 01874_stack_sequence.cpp)
add_executable(02475_verification_number 02475_verification_number.cpp)
add_executable(18258_queue_2 18258_queue_2.cpp)
add_executable(15576_large_multiplication_2 15576_large_multiplication_2.cpp)
add_executable(02164_cards_2 02164_cards_2.cpp)
add_executable(11866_josephus_problem_0 11866_josephus_problem_0.cpp)
add_executable(01966_printer 01966_printer.cpp)
add_executable(10866_deque 10866_deque.cpp)
add_executable(01021_rotating_queue 01021_rotating_queue.cpp)
add_executable(05430_ac 05430_ac.cpp)
add_executable(05015_ls 05015_ls.cpp)
add_executable(10826_fibonacci_4 10826_fibonacci_4.cpp)
add_executable(01149_rgb_street 01149_rgb_street.cpp)
add_executable(01932_integer_triangle 01932_integer_triangle.cpp)
add_executable(02579_stair_up 02579_stair_up.cpp)
add_executable(01463_make_one 01463_make_one.cpp)
add_executable(10844_staircase_number_easy 10844_staircase_number_easy.cpp)
add_executable(02156_wine_taster 02156_wine_taster.cpp)
add_executable(11053_longest_increasing_subsequence 11053_longest_increasing_subsequence.cpp)
add_executable(11054_longest_bitonic_subsequence 11054_longest_bitonic_subsequence.cpp)
add_executable(02565_electric_wires 02565_electric_wires.cpp)
add_executable(09251_lcs 09251_lcs.cpp)
add_executable(01912_continuous_sum 01912_continuous_sum.cpp)
add_executable(12865_knapsack 12865_knapsack.cpp)
add_executable(09095_add_one_two_three 09095_add_one_two_three.cpp)
add_executable(02193_pinary_numbers 02193_pinary_numbers.cpp)
add_executable(11727_2xn_tiling_2 11727_2xn_tiling_2.cpp)
add_executable(11052_buying_cards 11052_buying_cards.cpp)
add_executable(09465_stickers 09465_stickers.cpp)
add_executable(01010_laying_bridges 01010_laying_bridges.cpp)
add_executable(11057_ascending_numbers 11057_ascending_numbers.cpp)
add_executable(19699_sonanda 19699_sonanda.cpp)
add_executable(11725_who_s_your_parent 11725_who_s_your_parent.cpp)
add_executable(01167_diameter_of_tree 01167_diameter_of_tree.cpp)
add_executable(01967_diameter_of_tree_vip 01967_diameter_of_tree_vip.cpp)
add_executable(01991_tree_traversal 01991_tree_traversal.cpp)
add_executable(02263_preorder_inference 02263_preorder_inference.cpp)
add_executable(05639_postorder_inference_in_bst 05639_postorder_inference_in_bst.cpp)
add_executable(02342_dance_dance_revolution 02342_dance_dance_revolution.cpp)
add_executable(01920_search_number 01920_search_number.cpp)
add_executable(10815_number_cards 10815_number_cards.cpp)
add_executable(10816_number_cards_2 10816_number_cards_2.cpp)
add_executable(01654_cable_cropping 01654_cable_cropping.cpp)
add_executable(02805_woodcutter 02805_woodcutter.cpp)
add_executable(02110_installing_routers 02110_installing_routers.cpp)
add_executable(01300_k_th_number 01300_k_th_number.cpp)
add_executable(01259_palindrome_number 01259_palindrome_number.cpp)
add_executable(15829_hashing 15829_hashing.cpp)
add_executable(18111_minecraft 18111_minecraft.cpp)
add_executable(12738_longest_increasing_subsequence_3 12738_longest_increasing_subsequence_3.cpp)
add_executable(09663_n_queen 09663_n_queen.cpp)
add_executable(11279_max_heap 11279_max_heap.cpp)
add_executable(01927_min_heap 01927_min_heap.cpp)
add_executable(11286_absolute_min_heap 11286_absolute_min_heap.cpp)
add_executable(01655_say_median 01655_say_median.cpp)
add_executable(02293_coins 02293_coins.cpp)
add_executable(01699_sum_of_squares 01699_sum_of_squares.cpp)
add_executable(11066_merge_files 11066_merge_files.cpp)
add_executable(17404_rgb_street_2 17404_rgb_street_2.cpp)
add_executable(09093_reverse_words 09093_reverse_words.cpp)
add_executable(01406_editor 01406_editor.cpp)
add_executable(17413_reverse_words_2 17413_reverse_words_2.cpp)
add_executable(10799_iron_rods 10799_iron_rods.cpp)
add_executable(11758_ccw 11758_ccw.cpp)
add_executable(16194_buying_cards_2 16194_buying_cards_2.cpp)
add_executable(01309_zoo 01309_zoo.cpp)
add_executable(02225_divisions 02225_divisions.cpp)
add_executable(15990_add_one_two_three_5 15990_add_one_two_three_5.cpp)
add_executable(15988_add_one_two_three_3 15988_add_one_two_three_3.cpp)
add_executable(01016_01016_square_no_no_numbers 01016_square_no_no_numbers.cpp)
add_executable(01004_le_petit_prince 01004_le_petit_prince.cpp)
add_executable(17298_nge 17298_nge.cpp)
add_executable(17299_ngf 17299_ngf.cpp)
add_executable(01935_postfix_2 01935_postfix_2.cpp)
add_executable(01918_postfix 01918_postfix.cpp)
add_executable(10808_count_alphabets 10808_count_alphabets.cpp)
add_executable(10820_string_analysis 10820_string_analysis.cpp)
add_executable(02743_word_length 02743_word_length.cpp)
add_executable(11655_rot13 11655_rot13.cpp)
add_executable(10824_four_numbers 10824_four_numbers.cpp)
add_executable(11656_suffix_dictionary 11656_suffix_dictionary.cpp)
add_executable(06588_goldbach_s_conjecture 06588_goldbach_s_conjecture.cpp)
add_executable(09613_gcd_sum.cpp 09613_gcd_sum.cpp)
add_executable(17087_catch_that_cow_6 17087_catch_that_cow_6.cpp)
add_executable(01373_binary_to_octal 01373_binary_to_octal.cpp)
add_executable(01212_octal_to_binary 01212_octal_to_binary.cpp)
add_executable(02089_minus_binary 02089_minus_binary.cpp)
add_executable(17103_goldbach_partitions 17103_goldbach_partitions.cpp)
add_executable(11005_base_transformation_2 11005_base_transformation_2.cpp)
add_executable(02745_base_transformation 02745_base_transformation.cpp)
add_executable(11576_base_conversion 11576_base_conversion.cpp)
add_executable(02133_filling_tiles 02133_filling_tiles.cpp)
add_executable(14002_longest_increasing_subsequence_4 14002_longest_increasing_subsequence_4.cpp)
add_executable(11055_largest_increasing_subsequence 11055_largest_increasing_subsequence.cpp)
add_executable(13398_continuous_sum_2 13398_continuous_sum_2.cpp)
add_executable(03085_bomboni 03085_bomboni.cpp)
add_executable(01476_year_calculation 01476_year_calculation.cpp)
add_executable(01107_remote_controller 01107_remote_controller.cpp)
add_executable(14500_tetromino 14500_tetromino.cpp)
add_executable(01748_continue_writing_numbers 01748_continue_writing_numbers.cpp)
add_executable(15654_n_and_m_5 15654_n_and_m_5.cpp)
add_executable(15655_n_and_m_6 15655_n_and_m_6.cpp)
add_executable(15656_n_and_m_7 15656_n_and_m_7.cpp)
add_executable(15657_n_and_m_8 15657_n_and_m_8.cpp)
add_executable(06064_cain_calendar 06064_cain_calendar.cpp)
add_executable(15663_n_and_m_9 15663_n_and_m_9.cpp)
add_executable(15649_n_and_m 15649_n_and_m.cpp)
add_executable(15650_n_and_m_2 15650_n_and_m_2.cpp)
add_executable(15651_n_and_m_3 15651_n_and_m_3.cpp)
add_executable(15652_n_and_m_4 15652_n_and_m_4.cpp)
add_executable(15664_n_and_m_10 15664_n_and_m_10.cpp)
add_executable(15665_n_and_m_11 15665_n_and_m_11.cpp)
add_executable(15666_n_and_m_12 15666_n_and_m_12.cpp)
add_executable(10972_next_permutation 10972_next_permutation.cpp)
add_executable(10973_previous_permutation 10973_previous_permutation.cpp)
add_executable(10974_all_permutations 10974_all_permutations.cpp)
add_executable(10819_maximize_differences 10819_maximize_differences.cpp)
add_executable(10971_traveling_salesman_2 10971_traveling_salesman_2.cpp)
add_executable(06063_lotto 06063_lotto.cpp)
add_executable(01759_making_password 01759_making_password.cpp)
add_executable(15661_link_vs_start 15661_link_vs_start.cpp)
add_executable(02529_inequality_signs 02529_inequality_signs.cpp)
add_executable(01248_guess 01248_guess.cpp)
add_executable(11723_set 11723_set.cpp)
add_executable(01182_sum_of_subsequence 01182_sum_of_subsequence.cpp)
add_executable(14391_paper_pieces 14391_paper_pieces.cpp)
add_executable(16922_roman_numerals 16922_roman_numerals.cpp)
add_executable(13023_abcde 13023_abcde.cpp)
add_executable(01260_dfs_and_bfs 01260_dfs_and_bfs.cpp)
add_executable(02011_alphacode 02011_alphacode.cpp)
add_executable(02440_star_picture_3 02440_star_picture_3.cpp)
add_executable(02558_a_plus_b_2 02558_a_plus_b_2.cpp)
add_executable(02441_star_picture_4 02441_star_picture_4.cpp)
add_executable(01924_2007 01924_2007.cpp)
add_executable(11718_echo 11718_echo.cpp)
add_executable(11724_connected_components 11724_connected_components.cpp)
add_executable(01707_bipartite_graph 01707_bipartite_graph.cpp)
add_executable(20001_rubberduck_debugging 20001_rubberduck_debugging.cpp)
add_executable(02667_numbering_buildings 02667_numbering_buildings.cpp)
add_executable(11721_cut_ten_by_ten 11721_cut_ten_by_ten.cpp)
add_executable(11719_buffer_2 11719_buffer_2.cpp)
add_executable(04963_islands 04963_islands.cpp)
add_executable(01012_organic_cabbage 01012_organic_cabbage.cpp)
add_executable(02178_maze_hunt 02178_maze_hunt.cpp)
add_executable(07576_tomato_box 07576_tomato_box.cpp)
add_executable(01013_contact 01013_contact.cpp)
add_executable(07562_knight_moves 07562_knight_moves.cpp)
add_executable(02442_star_picture_5 02442_star_picture_5.cpp)
add_executable(10953_a_plus_b_6 10953_a_plus_b_6.cpp)
add_executable(01934_lcm 01934_lcm.cpp)
add_executable(01026_treasure 01026_treasure.cpp)
add_executable(01697_catch_that_cow 01697_catch_that_cow.cpp)
add_executable(02606_virus 02606_virus.cpp)
add_executable(02444_star_picture_7 02444_star_picture_7.cpp)
add_executable(02443_star_picture_6 02443_star_picture_6.cpp)
add_executable(02445_star_picture_8 02445_star_picture_8.cpp)
add_executable(16929_two_dots 16929_two_dots.cpp)
add_executable(16947_circle_line 16947_circle_line.cpp)
add_executable(16940_bfs_special_judge 16940_bfs_special_judge.cpp)
add_executable(16964_dfs_special_judge 16964_dfs_special_judge.cpp)
add_executable(02146_bridge 02146_bridge.cpp)
add_executable(13913_catch_that_cow_4 13913_catch_that_cow_4.cpp)
add_executable(13549_catch_that_cow_3 13549_catch_that_cow_3.cpp)
add_executable(14226_emoji 14226_emoji.cpp)
add_executable(01261_algospot 01261_algospot.cpp)
add_executable(02250_depth_and_breadth 02250_depth_and_breadth.cpp)
add_executable(01339_alphabet_mathematics 01339_alphabet_mathematics.cpp)
add_executable(14225_mex_sum_of_subsequence 14225_mex_sum_of_subsequence.cpp)
add_executable(15658_insert_operators_2 15658_insert_operators_2.cpp)
add_executable(16197_two_coins 16197_two_coins.cpp)
add_executable(16198_energy_gathering 16198_energy_gathering.cpp)
add_executable(04574_su_domino_ku 04574_su_domino_ku.cpp)
add_executable(01987_letters 01987_letters.cpp)
add_executable(01062_teach_words 01062_teach_words.cpp)
add_executable(13460_marble_escape_2 13460_marble_escape_2.cpp)
add_executable(12100_2048_easy 12100_2048_easy.cpp)
add_executable(15644_marble_escape_3 15644_marble_escape_3.cpp)
add_executable(16928_snakes_and_ladders 16928_snakes_and_ladders.cpp)
add_executable(16948_death_knight_moves 16948_death_knight_moves.cpp)
add_executable(09019_dslr 09019_dslr.cpp)
add_executable(14502_lab 14502_lab.cpp)
add_executable(12886_bunches_of_pebbles 12886_bunches_of_pebbles.cpp)
add_executable(02206_wall_breaker 02206_wall_breaker.cpp)
add_executable(14442_wall_breaker_2 14442_wall_breaker_2.cpp)
add_executable(16933_wall_breaker_3 16933_wall_breaker_3.cpp)
add_executable(16946_wall_breaker_4 16946_wall_breaker_4.cpp)
add_executable(16954_living_maze_hunt 16954_living_maze_hunt.cpp)
add_executable(03055_slikar 03055_slikar.cpp)
add_executable(16236_baby_shark 16236_baby_shark.cpp)
add_executable(06087_laserphones 06087_laserphones.cpp)
add_executable(01963_prime_path 01963_prime_path.cpp)
add_executable(10026_cow_art 10026_cow_art.cpp)
add_executable(14395_arithmetics 14395_arithmetics.cpp)
add_executable(02163_slice_chocolate 02163_slice_chocolate.cpp)
add_executable(02490_yut 02490_yut.cpp)
add_executable(01475_room_number 01475_room_number.cpp)
add_executable(02455_intelligent_train 02455_intelligent_train.cpp)
add_executable(11403_pathfinding 11403_pathfinding.cpp)
add_executable(10448_eureka_theorem 10448_eureka_theorem.cpp)
add_executable(02503_number_baseball 02503_number_baseball.cpp)
add_executable(13458_exam_supervisor 13458_exam_supervisor.cpp)
add_executable(02468_safe_area 02468_safe_area.cpp)
add_executable(03046_r2 03046_r2.cpp)
add_executable(01094_glue_sticks 01094_glue_sticks.cpp)
add_executable(05585_changes 05585_changes.cpp)
add_executable(14503_robotic_vacuum 14503_robotic_vacuum.cpp)
add_executable(16500_concatenate_strings 16500_concatenate_strings.cpp)
add_executable(01080_matrix 01080_matrix.cpp)
add_executable(02138_lights_and_switches 02138_lights_and_switches.cpp)
add_executable(01285_flip_coins 01285_flip_coins.cpp)
add_executable(02583_areas 02583_areas.cpp)
add_executable(02522_star_picture_12 02522_star_picture_12.cpp)
add_executable(07569_tomato_boxes 07569_tomato_boxes.cpp)
add_executable(01100_chesspieces_on_white 01100_chesspieces_on_white.cpp)
add_executable(10797_tenth_day_no_driving_system 10797_tenth_day_no_driving_system.cpp)
add_executable(01202_lopov 01202_lopov.cpp)
add_executable(02109_supermarket 02109_supermarket.cpp)
add_executable(14003_longest_increasing_subsequence_5 14003_longest_increasing_subsequence_5.cpp)
add_executable(02217_ropes 02217_ropes.cpp)
add_executable(02902_autori 02902_autori.cpp)
add_executable(11048_move 11048_move.cpp)
add_executable(01744_tie 01744_tie.cpp)
add_executable(02294_coins_2 02294_coins_2.cpp)
add_executable(01620_pokemon_master 01620_pokemon_master.cpp)
add_executable(05525_ioioi 05525_ioioi.cpp)
add_executable(17626_four_squares 17626_four_squares.cpp)
add_executable(01764_unseen_and_unheard 01764_unseen_and_unheard.cpp)
add_executable(10610_cesta 10610_cesta.cpp)
add_executable(02875_timsko 02875_timsko.cpp)
add_executable(01783_ill_knight 01783_ill_knight.cpp)
add_executable(12970_ab 12970_ab.cpp)
add_executable(12904_a_and_b 12904_a_and_b.cpp)
add_executable(11004_k_th_number 11004_k_th_number.cpp)
add_executable(01890_jump_the_board 01890_jump_the_board.cpp)
add_executable(02167_sum_of_two_dimensional_array 02167_sum_of_two_dimensional_array.cpp)
add_executable(14891_gears 14891_gears.cpp)
add_executable(10991_star_picture_16 10991_star_picture_16.cpp)
add_executable(01977_perfect_square 01977_perfect_square.cpp)
add_executable(02576_odds 02576_odds.cpp)
add_executable(02003_sum_of_numbers_2 02003_sum_of_numbers_2.cpp)
add_executable(02644_kin_degree 02644_kin_degree.cpp)
add_executable(02525_oven_clock 02525_oven_clock.cpp)
add_executable(05565_receipt 05565_receipt.cpp)
add_executable(10992_star_picture_17 10992_star_picture_17.cpp)
add_executable(02953_pet 02953_pet.cpp)
add_executable(01201_nmk 01201_nmk.cpp)
add_executable(02873_lunapark 02873_lunapark.cpp)
add_executable(12919_a_and_b_2 12919_a_and_b_2.cpp)
add_executable(02960_reseto 02960_reseto.cpp)
add_executable(10886_cute_or_not_cute 10886_cute_or_not_cute.cpp)
add_executable(18870_coordinate_compression 18870_coordinate_compression.cpp)
add_executable(10798_vertical_reading 10798_vertical_reading.cpp)
add_executable(01057_tournament 01057_tournament.cpp)
add_executable(14890_slope 14890_slope.cpp)
add_executable(02010_electrical_outlets 02010_electrical_outlets.cpp)
add_executable(10451_permutation_cycles 10451_permutation_cycles.cpp)
add_executable(10988_check_if_palindrome 10988_check_if_palindrome.cpp)
add_executable(01550_hexademical 01550_hexademical.cpp)
add_executable(02563_colored_paper 02563_colored_paper.cpp)
add_executable(11728_merge 11728_merge.cpp)
add_executable(11729_tower_of_hanoi 11729_tower_of_hanoi.cpp)
add_executable(01735_fraction_sum 01735_fraction_sum.cpp)
add_executable(10825_test_scores 10825_test_scores.cpp)
add_executable(02480_three_dices 02480_three_dices.cpp)
add_executable(02420_make_a_difference 02420_make_a_difference.cpp)
add_executable(01074_z 01074_z.cpp)
add_executable(01891_quadrant 01891_quadrant.cpp)
add_executable(02447_star_picture_10 02447_star_picture_10.cpp)
add_executable(02448_star_picture_11 02448_star_picture_11.cpp)
add_executable(01517_swaps_in_bubble_sort 01517_swaps_in_bubble_sort.cpp)
add_executable(11659_sum_of_segment_4 11659_sum_of_segment_4.cpp)
add_executable(10757_big_a_plus_b 10757_big_a_plus_b.cpp)
add_executable(10990_star_picture_15 10990_star_picture_15.cpp)
add_executable(16234_migration 16234_migration.cpp)
add_executable(01933_skyline 01933_skyline.cpp)
add_executable(18821_odds_and_evens 18821_odds_and_evens.cpp)
add_executable(02104_feel_good 02104_feel_good.cpp)
add_executable(17219_forget_password 17219_forget_password.cpp)
add_executable(07662_dual_priority_queue 07662_dual_priority_queue.cpp)
add_executable(20159_tazza 20159_tazza.cpp)
add_executable(11652_cards 11652_cards.cpp)
add_executable(01377_bubble_sort 01377_bubble_sort.cpp)
add_executable(01790_continue_writing_numbers_2 01790_continue_writing_numbers_2.cpp)
add_executable(01939_weight_limit 01939_weight_limit.cpp)
add_executable(02022_crossed_ladders 02022_crossed_ladders.cpp)
add_executable(11664_line_and_point 11664_line_and_point.cpp)
add_executable(02343_guitar_lesson 02343_guitar_lesson.cpp)
add_executable(13397_divide_into_segments_2 13397_divide_into_segments_2.cpp)
add_executable(01981_honeymoon_hike 01981_honeymoon_hike.cpp)
add_executable(01561_luna 01561_luna.cpp)
add_executable(02512_budget 02512_budget.cpp)
add_executable(02573_iceberg 02573_iceberg.cpp)
add_executable(01292_easy_to_solve 01292_easy_to_solve.cpp)
add_executable(16968_license_plate 16968_license_plate.cpp)
add_executable(16917_half_seasoned_and_half_fried 16917_half_seasoned_and_half_fried.cpp)
add_executable(16924_find_crosses 16924_find_crosses.cpp)
add_executable(16936_d3m2 16936_d3m2.cpp)
add_executable(16937_two_stickers 16937_two_stickers.cpp)
add_executable(16938_camp_preparation 16938_camp_preparation.cpp)
add_executable(16943_rearrange_number 16943_rearrange_number.cpp)
add_executable(16637_add_parentheses 16637_add_parentheses.cpp)
add_executable(15683_surveillance 15683_surveillance.cpp)
add_executable(17088_convert_to_arithmetic_sequence 17088_convert_to_arithmetic_sequence.cpp)
add_executable(15686_chicken_delivery 15686_chicken_delivery.cpp)
add_executable(02210_numerical_board_jump 02210_numerical_board_jump.cpp)
add_executable(03019_tetris 03019_tetris.cpp)
add_executable(02422_ice_cream 02422_ice_cream.cpp)
add_executable(09944_full_board 09944_full_board.cpp)
add_executable(17089_three_friends 17089_three_friends.cpp)
add_executable(17406_array_rotation_4 17406_array_rotation_4.cpp)
add_executable(17069_move_pipe 17069_move_pipe_2.cpp)
add_executable(16638_add_parentheses_2 16638_add_parentheses_2.cpp)
add_executable(17085_two_crosses 17085_two_crosses.cpp)
add_executable(16987_hearthegg 16987_hearthegg.cpp)
add_executable(16988_baaaaaaaaaduk2_easy 16988_baaaaaaaaaduk2_easy.cpp)
add_executable(15684_ghost_leg_manupulation 15684_ghost_leg_manupulation.cpp)
add_executable(04902_adding_up_triangles 04902_adding_up_triangles.cpp)
add_executable(16945_transform_to_magic_square 16945_transform_to_magic_square.cpp)
add_executable(16953_a_to_b 16953_a_to_b.cpp)
add_executable(01806_subsequence 01806_subsequence.cpp)
add_executable(01644_sum_of_consecutive_prime_numbers 01644_sum_of_consecutive_prime_numbers.cpp)
add_executable(01208_sum_of_subsequence_2 01208_sum_of_subsequence_2.cpp)
add_executable(02143_partial_sum_of_two_sequences 02143_partial_sum_of_two_sequences.cpp)
add_executable(07453_4_values_whose_sum_is_0 07453_4_values_whose_sum_is_0.cpp)
add_executable(16956_wolves_and_sheeps 16956_wolves_and_sheeps.cpp)
add_executable(05014_elevator_trouble 05014_elevator_trouble.cpp)
add_executable(09376_jailbreak 09376_jailbreak.cpp)
add_executable(02251_barrels 02251_barrels.cpp)
add_executable(16932_create_shape 16932_create_shape.cpp)
add_executable(01600_knight_wannabe 01600_knight_wannabe.cpp)
add_executable(17086_baby_shark_2 17086_baby_shark_2.cpp)
add_executable(04991_cleaning_robot 04991_cleaning_robot.cpp)
add_executable(02151_placing_mirrors 02151_placing_mirrors.cpp)
add_executable(02234_the_castle 02234_the_castle.cpp)
add_executable(12906_new_tower_of_hanoi 12906_new_tower_of_hanoi.cpp)
add_executable(17141_lab_2 17141_lab_2.cpp)
add_executable(17142_lab_3 17142_lab_3.cpp)
add_executable(09935_eksplozija 09935_eksplozija.cpp)
add_executable(03015_patrik 03015_patrik.cpp)
add_executable(01717_expression_of_set 01717_expression_of_set.cpp)
add_executable(07785_easy_work 07785_easy_work.cpp)
add_executable(03111_cenzura 03111_cenzura.cpp)
add_executable(16909_buying_cards_3 16909_buying_cards_3.cpp)
add_executable(12767_ceiling_function 12767_ceiling_function.cpp)
add_executable(16916_substring 16916_substring.cpp)
add_executable(01305_led_billboard 01305_led_billboard.cpp)
add_executable(01701_cubeditor 01701_cubeditor.cpp)
add_executable(14425_string_set 14425_string_set.cpp)
add_executable(13505_xor_of_two_numbers 13505_xor_of_two_numbers.cpp)
add_executable(09250_aho_corasick 09250_aho_corasick.cpp)
add_executable(10256_mutation 10256_mutation.cpp)
add_executable(12104_circular_zero_xor 12104_circular_zero_xor.cpp)
add_executable(13506_chameleon_substring 13506_chameleon_substring.cpp)
add_executable(13576_prefix_and_suffix 13576_prefix_and_suffix.cpp)
add_executable(09202_boggle 09202_boggle.cpp)
add_executable(05052_phone_list 05052_phone_list.cpp)
add_executable(13504_xor_sum 13504_xor_sum.cpp)
add_executable(13445_xor_subsequence 13445_xor_subsequence.cpp)
add_executable(02809_poplocavanje 02809_poplocavanje.cpp)
add_executable(10538_the_big_painting 10538_the_big_painting.cpp)
add_executable(11060_jump_jump 11060_jump_jump.cpp)
add_executable(15486_resignation_2 15486_resignation_2.cpp)
add_executable(10942_palindrome_query 10942_palindrome_query.cpp)
add_executable(15989_add_one_two_three_4 15989_add_one_two_three_4.cpp)
add_executable(01495_guitarist 01495_guitarist.cpp)
add_executable(12869_mutalisk 12869_mutalisk.cpp)
add_executable(10442_parentheses 10442_parentheses.cpp)
add_executable(01547_balls 01547_balls.cpp)
add_executable(11058_kriiiboard 11058_kriiiboard.cpp)
add_executable(11049_matrix_multiplication_order 11049_matrix_multiplication_order.cpp)
add_executable(05557_ichinensei 05557_ichinensei.cpp)
add_executable(12969_abc 12969_abc.cpp)
add_executable(14238_office_record 14238_office_record.cpp)
add_executable(12026_boj_street 12026_boj_street.cpp)
add_executable(06359_the_drunk_jailer 06359_the_drunk_jailer.cpp)
add_executable(12996_acka 12996_acka.cpp)
add_executable(02281_death_note 02281_death_note.cpp)
add_executable(03012_zapis 03012_zapis.cpp)
add_executable(02616_small_locomotives 02616_small_locomotives.cpp)
add_executable(01413_key_in_the_box 01413_key_in_the_box.cpp)
add_executable(10564_pushups 10564_pushups.cpp)
add_executable(01970_the_bavarian_beer_party 01970_the_bavarian_beer_party.cpp)
add_executable(12872_playlist 12872_playlist.cpp)
add_executable(01767_n_rook_2 01767_n_rook_2.cpp)
add_executable(17436_multiples_of_primes 17436_multiples_of_primes.cpp)
add_executable(01557_square_no_no_number 01557_square_no_no_number.cpp)
add_executable(02166_area_of_polygon 02166_area_of_polygon.cpp)
add_executable(17387_crossing_of_lines_2 17387_crossing_of_lines_2.cpp)
add_executable(01688_terrorism 01688_terrorism.cpp)
add_executable(01708_convex_hull 01708_convex_hull.cpp)
add_executable(02261a_nearest_two_points 02261a_nearest_two_points.cpp)
add_executable(11873_largest_rectangle 11873_largest_rectangle.cpp)
add_executable(01689_overlapping_lines 01689_overlapping_lines.cpp)
add_executable(02170_line_drawing 02170_line_drawing.cpp)
add_executable(02252_line_up 02252_line_up.cpp)
add_executable(01766_workbook 01766_workbook.cpp)
add_executable(02056_tasks 02056_tasks.cpp)
add_executable(01922_network_connection 01922_network_connection.cpp)
add_executable(01197_minimum_spanning_tree 01197_minimum_spanning_tree.cpp)
add_executable(01005_acm_craft 01005_acm_craft.cpp)
add_executable(10162_microwave 10162_microwave.cpp)
add_executable(05597_miteishutsushawa_dareda 05597_miteishutsushawa_dareda.cpp)
add_executable(02504_value_of_brackets 02504_value_of_brackets.cpp)
add_executable(14999_roll_the_dice 14999_roll_the_dice.cpp)
add_executable(11657_time_machine 11657_time_machine.cpp)
add_executable(01865_wormholes 01865_wormholes.cpp)
add_executable(01916_minimum_cost 01916_minimum_cost.cpp)
add_executable(01916a_minimum_cost 01916a_minimum_cost.cpp)
add_executable(11779_minimum_cost_2 11779_minimum_cost_2.cpp)
add_executable(01753_shortest_path 01753_shortest_path.cpp)
add_executable(11404_floyd 11404_floyd.cpp)
add_executable(11780_floyd_2 11780_floyd_2.cpp)
add_executable(01389_six_degrees_of_kevin_bacon 01389_six_degrees_of_kevin_bacon.cpp)
add_executable(09205_kastenlauf 09205_kastenlauf.cpp)
add_executable(02407_combination 02407_combination.cpp)
add_executable(01786_find 01786_find.cpp)
add_executable(12852_make_one_2 12852_make_one_2.cpp)
add_executable(14697_allocate_rooms 14697_allocate_rooms.cpp)
add_executable(09625_rijeci 09625_rijeci.cpp)
add_executable(13301_tile_decoration 13301_tile_decoration.cpp)
add_executable(14936_elevator_prank 14936_elevator_prank.cpp)
add_executable(14916_changes 14916_changes.cpp)
add_executable(19947_investment_master 19947_investment_master.cpp)
add_executable(01948_critical_path 01948_critical_path.cpp)
add_executable(01504_specific_shortest_path 01504_specific_shortest_path.cpp)
add_executable(01162_revamping_trails 01162_revamping_trails.cpp)
add_executable(01854_k_th_shortest_path 01854_k_th_shortest_path.cpp)
add_executable(20528_palindrome_shiritori 20528_palindrome_shiritori.cpp)
add_executable(20529_nearest_mbti_distance_of_three 20529_nearest_mbti_distance_of_three.cpp)
add_executable(20531_human_relation 20531_human_relation.cpp)
add_executable(01507_curious_minho 01507_curious_minho.cpp)
add_executable(01956_exercise 01956_exercise.cpp)
add_executable(01533_number_of_paths 01533_number_of_paths.cpp)
add_executable(12930_two_weights 12930_two_weights.cpp)
add_executable(01412_one_way 01412_one_way.cpp)
add_executable(01613_history 01613_history.cpp)
add_executable(01647_city_division_plan 01647_city_division_plan.cpp)
add_executable(02099_the_game_of_death 02099_the_game_of_death.cpp)
add_executable(17361_find_array_a 17361_find_array_a.cpp)
add_executable(11438_lca_2 11438_lca_2.cpp)
add_executable(11438a_lca_2 11438a_lca_2.cpp)
add_executable(01761_distances_of_vertices 01761_distances_of_vertices.cpp)
add_executable(17435_composite_function_and_queries 17435_composite_function_and_queries.cpp)
add_executable(03176_lubenica 03176_lubenica.cpp)
add_executable(15480_lca_and_queries 15480_lca_and_queries.cpp)
add_executable(08111_ones_and_zeros 08111_ones_and_zeros.cpp)
add_executable(17071_catch_that_cow_5 17071_catch_that_cow_5.cpp)
add_executable(01525_puzzle 01525_puzzle.cpp)
add_executable(16973_rectangle_maze_hunt 16973_rectangle_maze_hunt.cpp)
add_executable(01175_delivery 01175_delivery.cpp)
add_executable(16959_chessboard_trip 16959_chessboard_trip.cpp)
add_executable(16952_chessboard_trip_2 16952_chessboard_trip_2.cpp)
add_executable(12851_catch_that_cow_2 12851_catch_that_cow_2.cpp)
add_executable(03197_labudovi 03197_labudovi.cpp)
add_executable(09328_keys 09328_keys.cpp)
add_executable(16920_expansion_game 16920_expansion_game.cpp)
add_executable(15653_marble_escape_4 15653_marble_escape_4.cpp)
add_executable(15558_jump_game 15558_jump_game.cpp)
add_executable(14438_sequence_and_queries_17 14438_sequence_and_queries_17.cpp)
add_executable(02042_sum_of_segment 02042_sum_of_segment.cpp)
add_executable(11438b_lca_2 11438b_lca_2.cpp)
add_executable(02042a_sum_of_segment 02042a_sum_of_segment.cpp)
add_executable(02015_sum_of_numbers_4 02015_sum_of_numbers_4.cpp)
add_executable(10986_sum_of_remainders 10986_sum_of_remainders.cpp)
add_executable(11660_sum_of_segment_5 11660_sum_of_segment_5.cpp)
add_executable(02042b_sum_of_segment 02042b_sum_of_segment.cpp)
add_executable(11658_sum_of_segment_3 11658_sum_of_segment_3.cpp)
add_executable(04811_pills 04811_pills.cpp)
add_executable(01937_greedy_panda 01937_greedy_panda.cpp)
add_executable(01530_downhill 01530_downhill.cpp)
add_executable(01915_largest_square 01915_largest_square.cpp)
add_executable(15992_add_one_two_three_7 15992_add_one_two_three_7.cpp)
add_executable(16195_add_one_two_three_9 16195_add_one_two_three_9.cpp)
add_executable(01328_skyscraper 01328_skyscraper.cpp)
add_executable(03948_the_king_s_ups_and_downs 03948_the_king_s_ups_and_downs.cpp)
add_executable(12911_favorite_array 12911_favorite_array.cpp)
add_executable(13392_match_numbers_without_printing_method 13392_match_numbers_without_printing_method.cpp)
add_executable(02494_match_numbers 02494_match_numbers.cpp)
add_executable(01514_lock 01514_lock.cpp)
add_executable(02157_trip 02157_trip.cpp)
add_executable(02169_robot_control 02169_robot_control.cpp)
add_executable(02228_divide_segments 02228_divide_segments.cpp)
add_executable(01234_christmas_tree 01234_christmas_tree.cpp)
add_executable(02240_plum_tree 02240_plum_tree.cpp)
add_executable(01983_number_boxes 01983_number_boxes.cpp)
add_executable(02922_dobra 02922_dobra.cpp)
add_executable(05069_honeycomb_walk 05069_honeycomb_walk.cpp)
add_executable(02602_crossing_stone_bridge 02602_crossing_stone_bridge.cpp)
add_executable(01994_arithmetic_sequence 01994_arithmetic_sequence.cpp)
add_executable(01947_exchange_of_gifts 01947_exchange_of_gifts.cpp)
add_executable(02092_number_of_sets 02092_number_of_sets.cpp)
add_executable(02172_palindrome_path 02172_palindrome_path.cpp)
add_executable(12950_palindrome_walk 12950_palindrome_walk.cpp)
add_executable(02008_ladder_game 02008_ladder_game.cpp)
add_executable(01126_same_tower 01126_same_tower.cpp)
add_executable(01513_find_path 01513_find_path.cpp)